infrastructure/k8s/manifest/demo-webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapi
  namespace: gnx-apps
  labels:
    app: demo-webapi

spec:
  selector:
    matchLabels:
      app: demo-webapi
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-webapi
    spec:
      containers:
        - name: demo-webapi
          image: genocs/demo-webapi:1.1.362
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: demo-webapi
  namespace: gnx-apps

spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: demo-webapi
