infrastructure/k8s/manifest/demo-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-worker
  namespace: gnx-apps
  labels:
    app: demo-worker

spec:
  selector:
    matchLabels:
      app: demo-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-worker
    spec:
      containers:
        - name: demo-worker
          image: genocs/demo-worker:1.1.370
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-worker
  namespace: gnx-apps

spec:
  # type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: demo-worker
