infrastructure/k8s/manifest/notifications.yml
# notifications.yml
apiVersion: apps/v1
kind: Deployment
# notifications-deployment.yml
metadata:
  namespace: gnx-apps
  name: notifications
spec:
  replicas: 1 # Number of pods to run
  selector:
    matchLabels:
      app: notifications # Select pods with this label
  template:
    metadata:
      labels:
        app: notifications # Label for the pods
    spec:
      containers:
        - name: notifications-container
          image: genocs/notifications-webapi:1.0.4 # Replace with your image
          ports:
            - containerPort: 8080 # Port the container exposes
          resources: # Optional resource requests and limits
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi

---
# notifications-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gnx-apps
  name: notifications-svc
spec:
  selector:
    app: notifications # Select pods with this label
  ports:
    - protocol: TCP
      port: 80 # Port the service exposes
      targetPort: 8080 # Port the container exposes
  type: ClusterIP # Expose the service internally
