infrastructure/k8s/manifest/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agic-ingress
  namespace: gnx-apps
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway

spec:
  rules:
    - http:
        paths:
          - path: /webapi
            pathType: Prefix
            backend:
              service:
                name: demo-webapi
                port:
                  number: 80
          - path: /backgroundworker
            pathType: Prefix
            backend:
              service:
                name: demo-worker
                port:
                  number: 80
